Punctuation and Assumption

--- a/lecture11-CN.ipynb
+++ b/lecture11-CN.ipynb
@@ -13,7 +13,7 @@
    "id": "41b75691",
    "metadata": {},
    "source": [
-    "**广义矩估计**（*Generalized method of moments*  GMM ）是矩估计的延伸。它寻找矩二次型最小的参数值。它特别适用于那些可以从经济学理论中提取出矩条件的模型。GMM是当代计量经济学最受欢迎的方法之一，两阶段最小二乘法（2SLS）是该方法的特例。"
+    "**广义矩估计**(*Generalized method of moments*  GMM )是矩估计的延伸，它寻找矩二次型最小的参数值。它特别适用于那些可以从经济学理论中提取出矩条件的模型。GMM是当代计量经济学最受欢迎的方法之一，两阶段最小二乘法(2SLS)是该方法的特例。"
    ]
   },
   {
@@ -35,7 +35,7 @@
     "y_{i}=x_{i}'\\beta+\\epsilon_{i}\n",
     "$$\n",
     "\n",
-    "识别是我们进行结构性估计的前提条件。首先，我们假设模型是可识别的：存在 $L\\times1$ 工具向量 $z_{i}$，使得 $\\mathbb{E}\\left[z_{i}\\epsilon_{i}\\right]=0_{L}$ ，且$\\Sigma:=\\mathbb{E}\\left[z_{i}x_{i}'\\right]$ 是列满秩的。将 $\\beta_{0}$ 记为方程 $E\\left[z_{i}\\left(y_{i}-x_{i}'\\beta\\right)\\right]=0_{L}$ 的根，其具有唯一识别性。\n",
+    "识别(identification)是结构性估计的前提条件。首先，我们假设模型是可识别的：存在 $L\\times1$ 工具向量 $z_{i}$，使得 $\\mathbb{E}\\left[z_{i}\\epsilon_{i}\\right]=0_{L}$ ，且$\\Sigma:=\\mathbb{E}\\left[z_{i}x_{i}'\\right]$ 是列满秩的。将 $\\beta_{0}$ 记为方程 $E\\left[z_{i}\\left(y_{i}-x_{i}'\\beta\\right)\\right]=0_{L}$ 的根，其具有唯一识别性。\n",
     "\n",
     "### 恰好识别\n",
     "当 $L=K$ ，工具变量回归 **恰好识别** (just-identified 或 exactly identified)。\n",
@@ -75,7 +75,7 @@
     "Q\\left(\\beta\\right)=\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]\n",
     "$$\n",
     "\n",
-    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵（我们将在后面讨论如何选择 $W$）。由于它是二次型，所有的 $\\beta$ 都满足 $Q\\left(\\beta\\right)\\geq 0$ 。**识别** 意味着 $Q\\left(\\beta\\right)=0$，该等式当且仅当 $\\beta=\\beta_{0}$ 成立。从而我们可以得到结论：\n",
+    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵(我们将在后面讨论如何选择 $W$)。由于它是二次型，所有的 $\\beta$ 都满足 $Q\\left(\\beta\\right)\\geq 0$ 。**识别** 意味着 $Q\\left(\\beta\\right)=0$，该等式当且仅当 $\\beta=\\beta_{0}$ 成立。从而我们可以得到结论：\n",
     "\n",
     "$$\n",
     "\\beta_{0}=\\arg\\min_{\\beta}Q\\left(\\beta\\right)\n",
@@ -100,7 +100,7 @@
     "\\beta_{0}=\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\mathbb{E}\\left[z_{i}y_{i}\\right].\n",
     "$$(eq:over_beta)\n",
     "\n",
-    "由于模型中矩 ($L$)的数量比未知参数 ($K$) 更多，我们称之为**广义矩估计** 。\n"
+    "由于模型中矩($L$)的数量比未知参数($K$)更多，我们称之为**广义矩估计** 。\n"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "id": "b22a29cf",
    "metadata": {},
    "source": [
-    "```{admonition} Remark 11.1\n",
+    "```{admonition} 评注 11.1\n",
     "上述等式可以通过在 {eq}`eq:moment2` 两边同时乘上 $\\Sigma'W$ 得到，从而避免了求解最小值的问题。\n",
     "```\n"
    ]
@@ -118,8 +118,8 @@
    "id": "d7209b9a",
    "metadata": {},
    "source": [
-    "```{admonition} Remark 11.2\n",
-    "尽管我们把恰好识别和过度识别分开讨论，实际上前者 {eq}`eqn:just_beta` 是后者 {eq}`eq:over_beta` 的一种特殊情况。从这个角度上说，GMM是真正意义上的“广义”的矩估计。要理解这个概念，需要注意到当 $L=K$ 时, 由于 $\\Sigma$ 是一个方阵，给定任意的 $W$ 我们能够得到：\n",
+    "```{admonition} 评注 11.2\n",
+    "尽管我们把恰好识别和过度识别分开讨论，实际上前者 {eq}`eqn:just_beta` 是后者 {eq}`eq:over_beta` 的一种特殊情况。从这个角度上说，GMM是真正意义上的“广义”的矩估计。要理解这个概念，需要注意到当 $L=K$ 时， 由于 $\\Sigma$ 是一个方阵，给定任意的 $W$ 我们能够得到：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -163,7 +163,7 @@
    "id": "8ecbd2f9",
    "metadata": {},
    "source": [
-    "```{admonition} Exercise 11.1\n",
+    "```{admonition} 练习 11.1\n",
     "同样的GMM估计量 $\\hat{\\beta}$ 可以通过最小化如下函数得到：\n",
     "\n",
     "$$\n",
@@ -184,7 +184,7 @@
     "现在我们来验证 $\\widehat{\\beta}$ 的渐近性质。以下是一系列的假设：\n",
     "\n",
     "\n",
-    "```{admonition} 假设 11.1（A.1）\n",
+    "```{admonition} 假设 11.1(A.1)\n",
     "$Z'X/n\\stackrel{\\mathrm{p}}{\\to}\\Sigma$ 和 $Z'\\epsilon/n\\stackrel{\\mathrm{p}}{\\to}0_{L}$\n",
     "```\n",
     "\n",
@@ -196,9 +196,9 @@
    "id": "60bf7623",
    "metadata": {},
    "source": [
-    "```{admonition} Theorem 11.1 \n",
+    "```{admonition} 定理 11.1 \n",
     "\n",
-    "基于假设 A.1 , $\\widehat{\\beta}$ 是相合的。\n",
+    "基于假设 A.1 ， $\\widehat{\\beta}$ 是相合的。\n",
     "```\n",
     "\n",
     "**证明** ：这里的证明步骤于证明OLS估计量的相合性类似：\n",
@@ -220,7 +220,7 @@
     "\n",
     "为了验证渐近的正态性，我们假设中心极限定理可以适用。\n",
     "\n",
-    "```{admonition} Assumption 11.2(A.2) \n",
+    "```{admonition} 假设 11.2(A.2) \n",
     "$$\n",
     "\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}z_{i}\\epsilon_{i}\\stackrel{d}{\\to}N\\left(0_{L},\\Omega\\right)\n",
     "$$\n",
@@ -229,7 +229,7 @@
     "```\n",
     "\n",
     "\n",
-    "```{admonition} Theorem 11.2 (渐进正态性）\n",
+    "```{admonition} 定理 11.2 (渐进正态性)\n",
     "基于假设 A.1 和 A.2 有：\n",
     "\n",
     "$$\n",
@@ -286,7 +286,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "```{admonition} Proposition 11.1 \n",
+    "```{admonition} 命题 11.1 \n",
     "对于任意的正定对称矩阵 $W$ ，它与渐近方差之间的差：\n",
     "\n",
     "$$\n",
@@ -359,8 +359,8 @@
     "$$\n",
     "\n",
     "第二个估计量是渐近有效的。\n",
-    "```{admonition} Exercise 11.2 \n",
-    "可以看出如果 $\\widehat{\\Omega}\\stackrel{p}{\\to}\\Omega$, 那么\n",
+    "```{admonition} 练习 11.2 \n",
+    "可以看出如果 $\\widehat{\\Omega}\\stackrel{p}{\\to}\\Omega$，那么\n",
     "$\\sqrt{n}\\left(\\widehat{\\beta}^{\\natural}(\\widehat{\\Omega}^{-1})-\\widehat{\\beta}\\left(\\Omega^{-1}\\right)\\right)\\stackrel{p}{\\to}0$ 。\n",
     "换言之，可行估计量\n",
     "$\\widehat{\\beta}^{\\natural}(\\widehat{\\Omega}^{-1})$ 渐近等同于不可行但有效的估计量\n",
@@ -373,10 +373,10 @@
    "id": "f37440fb",
    "metadata": {},
    "source": [
-    "### 两阶段最小二乘（2SLS）\n",
+    "### 两阶段最小二乘(2SLS)\n",
     "\n",
     "如果我们进而假设满足条件同方差：\n",
-    "$\\mathbb{E}\\left[\\epsilon_{i}^{2}|z_{i}\\right]=\\sigma^{2}$, 那么：\n",
+    "$\\mathbb{E}\\left[\\epsilon_{i}^{2}|z_{i}\\right]=\\sigma^{2}$，那么：\n",
     "\n",
     "$$\n",
     "\\Omega=\\mathbb{E}\\left[z_{i}z_{i}'\\epsilon_{i}^{2}\\right]=\\mathbb{E}\\left[z_{i}z_{i}'\\mathbb{E}\\left[\\epsilon_{i}^{2}|z_{i}\\right]\\right]=\\sigma^{2}\\mathbb{E}\\left[z_{i}z_{i}'\\right].\n",
@@ -391,14 +391,14 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "当 $L>K$ 时，这个表达式与 2SLS 表达式完全一致。因此, 两阶段最小二乘可以被视为GMM带有伴随矩阵 $\\left(Z'Z/n\\right)^{-1}$ 的特例。在条件同方差假设下, 2SLS 是有效估计量。然而，尽管 2SLS 十分流行，但在异方差的情况下它不是有效估计量。\n",
+    "当 $L>K$ 时，这个表达式与 2SLS 表达式完全一致。因此， 两阶段最小二乘可以被视为GMM带有伴随矩阵 $\\left(Z'Z/n\\right)^{-1}$ 的特例。在条件同方差假设下，2SLS 是有效估计量。然而，尽管 2SLS 十分流行，但在异方差的情况下它不是有效估计量。\n",
     "\n",
-    "```{admonition} Remark 11.3\n",
+    "```{admonition} 评注 11.3\n",
     "2SLS 得名于它通过两步得到回归结果: 首先用所有工具变量 $Z$ 对 $X$ 进行回归，之后用对应的值和包含的外生变量对 $y$ 进行回归。然而，通过上述等式，2SLS实际上可以一步得到，因为它是GMM的特例。\n",
     "```\n",
     "\n",
-    "```{admonition} Remark 11.4\n",
-    "如果有效估计量不难找，计量经济学者会更倾向于使用有效估计量。使用有效估计量的好处不仅仅在于系数估计更加精确。许多专门的检验，比如之后我们将介绍的 $J$-统计量，将依赖于有效估计量在原假设中得到 $\\chi^{2}$ 分布。否则它们的渐进分布将是不标准的，分布的临界值将只能用蒙特卡罗方法（Monte Carlo simulations）才能找到。\n",
+    "```{admonition} 评注 11.4\n",
+    "如果有效估计量不难找，计量经济学者会更倾向于使用有效估计量。使用有效估计量的好处不仅仅在于系数估计更加精确。许多专门的检验，比如之后我们将介绍的 $J$-统计量，将依赖于有效估计量在原假设中得到 $\\chi^{2}$ 分布。否则它们的渐进分布将是不标准的，分布的临界值将只能用蒙特卡罗方法(Monte Carlo simulations)才能找到。\n",
     "```"
    ]
   },
@@ -410,7 +410,7 @@
     "## 非线性GMM模型\n",
     "\n",
     "GMM 的原理也适用于矩条件中存在非线性参数的模型。\n",
-    "令 $g_{i}\\left(\\beta\\right)=g\\left(w_{i},\\beta\\right)\\mapsto\\mathbb{R}^{L}$ 为 $w_{i}$ 和参数 $\\beta$ 的函数。如果在经济学理论中 $\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]=0$ （统计学家称之为 **估计方程**） 我们就可以将 GMM 总体标准方程写作：\n",
+    "令 $g_{i}\\left(\\beta\\right)=g\\left(w_{i},\\beta\\right)\\mapsto\\mathbb{R}^{L}$ 为 $w_{i}$ 和参数 $\\beta$ 的函数。如果在经济学理论中 $\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]=0$ (统计学家称之为 **估计方程**) 我们就可以将 GMM 总体标准方程写作：\n",
     "\n",
     "$$\n",
     "Q\\left(\\beta\\right)=\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]'W\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]\n",
@@ -418,7 +418,7 @@
     "\n",
     "```{admonition} Example 11.1\n",
     "线性模型是非线性模型的一种特殊情况。在前面章节提到的线性工具变量模型中，数据是\n",
-    "$w_{i}=\\left(y_{i},x_{i},z_{i}\\right)$, 且矩函数为\n",
+    "$w_{i}=\\left(y_{i},x_{i},z_{i}\\right)$，且矩函数为\n",
     "$g\\left(w_{i},\\beta\\right)=z_{i}'\\left(y_{i}-x_{i}\\beta\\right)$.\n",
     "```\n",
     "在现实中，我们用样本矩来表示标准函数中的总体矩：\n",
@@ -433,9 +433,9 @@
     "\\hat{\\beta}=\\arg\\min_{\\beta}Q_{n}\\left(\\beta\\right).\n",
     "$$ \n",
     "\n",
-    "这些非线性模型往往得不到一个封闭解，但是渐近性质依然成立。在此我们不给出具体证明，介绍一下这些渐近性质： \n",
+    "这些非线性模型往往得不到一个封闭解，但是渐近性质依然成立。在此我们不给出具体证明，对这些渐近性质仅作介绍： \n",
     "\n",
-    "```{admonition} Theorem 11.3 \n",
+    "```{admonition} 定理 11.3 \n",
     "(a) 如果模型是可识别的，且对于任意常数 $\\varepsilon>0$ \n",
     "\n",
     "$$\n",
@@ -449,7 +449,7 @@
     "$\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}g_{i}\\left(\\beta_{0}\\right)\\stackrel{d}{\\to}N\\left(0,\\Omega\\right)$\n",
     "且\n",
     "$\\Sigma=\\mathbb{E}\\left[\\frac{\\partial}{\\partial\\beta'}g_{i}\\left(\\beta_{0}\\right)\\right]$\n",
-    "是列满秩的, 那么：\n",
+    "是列满秩的，那么：\n",
     "\n",
     "$$\n",
     "\\sqrt{n}\\left(\\hat{\\beta}-\\beta_{0}\\right)\\stackrel{d}{\\to}N\\left(0,\\left(\\Sigma'W\\Sigma\\right)^{-1}\\left(\\Sigma'W\\Omega W\\Sigma\\right)\\left(\\Sigma'W\\Sigma\\right)^{-1}\\right)\n",
@@ -458,13 +458,13 @@
     "其中\n",
     "$\\Omega=\\mathbb{E}\\left[g_{i}\\left(\\beta_{0}\\right)g_{i}\\left(\\beta_{0}\\right)'\\right]$.\n",
     "\n",
-    "(c) 如果我们选 $W=\\Omega^{-1}$ , 于是该估计量有效,\n",
+    "(c) 如果我们选 $W=\\Omega^{-1}$ ，于是该估计量有效，\n",
     "渐近方差会变为：\n",
     "$\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}$.\n",
-    "```{admonition} Remark 11.5\n",
+    "```{admonition} 评注 11.5\n",
     "上述的这些假设并非全部假设。我们只陈列出了关键部分，略过了其中的一些技术细节。\n",
     "```\n",
-    "$Q_{n}\\left(\\beta\\right)$ 计算这些矩与0的距离。适当的放缩后，它可以作为一个检验统计量。在原假设 $\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]=0_{L}$ 中, \n",
+    "$Q_{n}\\left(\\beta\\right)$ 计算这些矩与0的距离。适当的放缩后，它可以作为一个检验统计量。在原假设 $\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]=0_{L}$ 中，\n",
     "Sargan-Hansen $J$-检验 验证了模型是否违反了矩条件。该检验统计具体如下：\n",
     "\n",
     "$$\n",
@@ -473,7 +473,7 @@
     " & =\\left(\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}g_{i}\\left(\\widehat{\\beta}\\right)\\right)'\\widehat{\\Omega}^{-1}\\left(\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}g_{i}\\left(\\widehat{\\beta}\\right)\\right)\\end{aligned}\n",
     "$$\n",
     "\n",
-    "其中 $\\widehat{\\Omega}$ 是 $\\Omega$ 的相合估计量, 且\n",
+    "其中 $\\widehat{\\Omega}$ 是 $\\Omega$ 的相合估计量，且\n",
     "$\\widehat{\\beta}$ 是一个有效估计量，比如两阶段\n",
     "GMM 估计量 $\\widehat{\\beta}^{\\natural}(\\widehat{\\Omega}^{-1})$ 。这个统计量在分布中会收敛于一个自由度为 $L-K$ 的 $\\chi^{2}$ 随机变量。也就是说，在原假设中：\n",
     "\n",
@@ -481,7 +481,7 @@
     "J\\left(\\widehat{\\beta}\\right)\\stackrel{d}{\\to}\\chi^{2}\\left(L-K\\right).\n",
     "$$\n",
     "\n",
-    "如果原假设为假, 往往检验统计量会偏大，从而更倾向于拒绝原假设。"
+    "如果原假设为假，往往检验统计量会偏大，从而更倾向于拒绝原假设。"
    ]
   },
   {
@@ -492,10 +492,10 @@
     "## 总结\n",
     "\n",
     " GMM 在计量经济学中的流行是因为经济学理论往往没有足够的信息判断变量间的参数关系，然而许多经济学假设能够得出矩约束条件。例如，**有效市场假设** 表明未来的价格走势 $\\Delta p_{t+1}$ 不能用过去公开的信息集 $\\mathscr{I}_{t}$ 预测，因此 $\\mathbb{E}\\left[\\Delta p_{t+1}|\\mathscr{I}_{t}\\right]=0$ 。它表明信息集 $\\mathscr{I}_{t}$ 中变量的任意函数都与 $\\Delta p_{t+1}$ 正交。\n",
-    "于是我们可以建立一系列矩条件来检验有效市场假设。尽管GMM不难理解, 但是在现实中它会遇到各种问题。因此有大量的经济学文献讨论GMM的局限性和它们的解决办法。\n",
+    "于是我们可以建立一系列矩条件来检验有效市场假设。尽管GMM不难理解，但是在现实中它会遇到各种问题。因此有大量的经济学文献讨论GMM的局限性和它们的解决办法。\n",
     "\n",
     "**历史轶闻**: 2SLS 的发现归功于 {cite}`theil1953repeated` 。在线性工具变量模型中， $J$-统计量由\n",
-    "{cite}`sargan1958estimation` 提出, 且 {cite}`hansen1982large` 把它推广到非线性模型中。\n",
+    "{cite}`sargan1958estimation` 提出，且 {cite}`hansen1982large` 把它推广到非线性模型中。\n",
     "\n",
     "**拓展阅读**:  GMM 的二次型形式使得它在面对大量数据时很难建立足够多的矩。**经验似然** 是另一种可供选择的方法，它可以用来进行矩约束模型的估计。{cite}`shi2016econometric` 在经验似然的研究框架下解决了高维矩的估计问题。\n"
    ]
