fix jb citation issues need to add ```{bibliography} ```

--- a/lecture11-CN.ipynb
+++ b/lecture11-CN.ipynb
@@ -497,7 +497,10 @@
     "**历史轶闻**: 2SLS 的发现归功于 {cite}`theil1953repeated` 。在线性工具变量模型中， $J$-统计量由\n",
     "{cite}`sargan1958estimation` 提出，且 {cite}`hansen1982large` 把它推广到非线性模型中。\n",
     "\n",
-    "**拓展阅读**:  GMM 的二次型形式使得它在面对大量数据时很难建立足够多的矩。**经验似然** 是另一种可供选择的方法，它可以用来进行矩约束模型的估计。{cite}`shi2016econometric` 在经验似然的研究框架下解决了高维矩的估计问题。\n"
+    "**拓展阅读**:  GMM 的二次型形式使得它在面对大量数据时很难建立足够多的矩。**经验似然** 是另一种可供选择的方法，它可以用来进行矩约束模型的估计。{cite}`shi2016econometric` 在经验似然的研究框架下解决了高维矩的估计问题。\n",
+    "\n",
+    "```{bibliography}\n",
+    "```\n"
    ]
   }
  ],
