add references into a separate file

--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -643,7 +643,7 @@
     "```\n",
     "\n",
     "``{admonition} 拓展阅读\n",
-    "@phillips1983exact 总结了计量经济学理论的精确小样本理论结果。 在这之后，计量经济学的理论研究转向了大样本理论。 \n",
+    "{cite}`phillips1983exact` 总结了计量经济学理论的精确小样本理论结果。 在这之后，计量经济学的理论研究转向了大样本理论。 \n",
     "```\n"
    ]
   },
