--- a/real-data.ipynb
+++ b/real-data.ipynb
@@ -6,18 +6,27 @@
    "source": [
     "# 数据实例\n",
     "\n",
-    "在古代,中国北方曾是世界上最繁荣的地区之一,但现在的中国南方比北方富裕。\n",
+    "在古代，中国北方曾是世界上最繁荣的地区之一，但现在的中国南方比北方富裕。\n",
     "经济史学家通常认为,造成这个现象的主要原因之一是汉族的南移。历史上规模最大的汉族南移发生在宋代。\n",
     "Bai(2021)发现，当时人口的迁入该地区当代的经济繁荣产生了显著的积极影响。\n",
     "\n",
-    "为了量化移民的长期影响, Bai(2021) 收集287个地区在1127--1130年间的移民数量和\n",
-    "该地2000年GDP。在简单回归中,采用对数GDP作为应变量(y) ，对数移民数(m)以及该地是否位于中国南方的虚拟变量(W)作为自变量。回归结果如下：\n",
+    "为了量化移民的长期影响，Bai(2021) 收集287个地区在1127--1130年间的移民数量和\n",
+    "该地2000年GDP。在简单回归中，采用对数GDP作为应变量(y)，对数移民数(m)以及该地是否位于中国南方的虚拟变量(W)作为自变量。回归结果如下：\n",
     "\n",
     "$$\n",
     "\\hat{y} = 1.577 + 0.258 m - 0.212 W\n",
     "$$\n",
     "\n",
-    "从结果中可以看到，对数移民数与经济繁荣度呈正相关，而位于中国南方则与经济繁荣度呈负相关。\n"
+    "从结果中可以看到，对数移民数系数为正，而位于中国南方则系数为负。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following block is to import data and run OLS regression.\n",
+    "\n",
+    "The standard deviation and the inference is based on homoskedastic error."
    ]
   },
   {
@@ -68,6 +77,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following block uses the heteroskedastic-robust error."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -99,6 +115,15 @@
     "robust.csv <- sandwich::vcovHC(reg.ols,type=\"HC1\")\n",
     "print( lmtest::coeftest(reg.ols, vcov. = robust.csv) ) # robust test\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The negative coefficient for the dummy variable `south` is counterintuitive. \n",
+    "If we add more control variables, the significance is gone.\n",
+    "The following regression replicated Column (2) of Table II."
    ]
   },
   {
