--- a/lecture11-CN.ipynb
+++ b/lecture11-CN.ipynb
@@ -13,7 +13,7 @@
    "id": "41b75691",
    "metadata": {},
    "source": [
-    "**广义矩估计**(*Generalized method of moments*  GMM )是矩估计的延伸，它寻找矩二次型最小的参数值。它特别适用于那些可以从经济学理论中提取出矩条件的模型。GMM是当代计量经济学最受欢迎的方法之一，两阶段最小二乘法(2SLS)是该方法的特例。"
+    "**广义矩估计**(*Generalized method of moments*  GMM )是基于矩估计思想延申出来的一种估计方法。它的主要思路是，在矩条件的个数大于参数的个数的情况下，求解距离函数(矩二次型)的最小值。由此得到的估计量就是广义矩估计量。因此，对于那些本身就蕴含着矩条件的经济学模型来说，GMM无疑是一种方便又有效的方法。自诞生以来，GMM就一直是当代计量经济学理论的宠儿。它是一个极具综合性的计量方法，在它之前的2SLS、GLS、SUR和Pooled OLS等一系列传统计量模型都是它的特殊情况。"
    ]
   },
   {
@@ -29,30 +29,16 @@
    "id": "a4e3e882",
    "metadata": {},
    "source": [
-    "我们先前讨论了有 $K$ 个回归量的一元线性回归方程\n",
+    "我们先来讨论有 $K$ 个回归量的线性回归方程\n",
     "\n",
     "$$\n",
-    "y_{i}=x_{i}'\\beta+\\epsilon_{i}\n",
+    "y_{i}='\\beta+\\epsilon_{i}.\n",
     "$$\n",
     "\n",
-    "识别(identification)是结构性估计的前提条件。首先，我们假设模型是可识别的：存在 $L\\times1$ 工具向量 $z_{i}$，使得 $\\mathbb{E}\\left[z_{i}\\epsilon_{i}\\right]=0_{L}$ ，且$\\Sigma:=\\mathbb{E}\\left[z_{i}x_{i}'\\right]$ 是列满秩的。将 $\\beta_{0}$ 记为方程 $E\\left[z_{i}\\left(y_{i}-x_{i}'\\beta\\right)\\right]=0_{L}$ 的根，其具有唯一识别性。\n",
+    "在统计学视角中，只有可识别(identification)的结构方程才能够进行估计。\n",
+    "从计量的角度来说，可识别指的是对于联立方程模型中的每一个结构方程，都能够得到确定的参数估计值。如果一个方程系统中存在一个不可识别的随机方程，那么我们认为该联立方程模型是不可识别的。\n",
     "\n",
-    "### 恰好识别\n",
-    "当 $L=K$ ，工具变量回归 **恰好识别** (just-identified 或 exactly identified)。\n",
-    "通过正交条件能够得到：\n",
-    "\n",
-    "$$\n",
-    "\\Sigma\\beta_{0}=\\mathbb{E}\\left[z_{i}y_{i}\\right]\n",
-    "$$\n",
-    "\n",
-    "于是我们可以用封闭形式来表示 $\\beta_{0}$ ：\n",
-    "\n",
-    "$$\n",
-    "\\beta_{0}=\\Sigma^{-1}\\mathbb{E}\\left[z_{i}y_{i}\\right]\n",
-    "$$(eqn:just_beta)\n",
-    "\n",
-    "\n",
-    "封闭形式的解使得我们能用样本矩来代替总体估计，这也属于一种矩估计。不过，我们将会把这种估计方法放到下一章节介绍。"
+    "从数学推导的角度则可以这样理解：如果把所有工具变量所构成的向量记为 $L\\times1$ 的向量 $z_{i}$ (可以包含 $x_{i}$ ，即外生变量也能作为工具变量)， $z_{i}$ 满足 $\\mathbb{E}\\left[z_{i}\\epsilon_{i}\\right]=0_{L}$ 且$\\Sigma:=\\mathbb{E}\\left[z_{i}x_{i}'\\right]$ 列满秩；记 $\\beta_{0}$ 记为方程 $E\\left[z_{i}\\left(y_{i}-x_{i}'\\beta\\right)\\right]=0_{L}$ 的根，由于矩阵列满秩， $\\beta_{0}$ 为该线性方程组的唯一解。这种方程只有唯一解的情况就是我们所认为的成功识别。一般情况下，我们默认回归模型是可识别的。\n"
    ]
   },
   {
@@ -62,27 +48,47 @@
    "source": [
     "### 过度识别\n",
     "\n",
-    "当 $L>K$ ，模型过度识别(over identification)。根据正交条件依然能够得到：\n",
+    "当 $L=K$ ，我们称之为 **恰好识别** (just-identified 或 exactly identified)。\n",
+    "通过正交条件能够得到：\n",
+    "\n",
+    "$$\n",
+    "\\Sigma\\beta_{0}=\\mathbb{E}\\left[z_{i}y_{i}\\right]\n",
+    "$$\n",
+    "\n",
+    "于是我们可以得到封闭形式的 $\\beta_{0}$ ：\n",
+    "\n",
+    "$$\n",
+    "\\beta_{0}=\\Sigma^{-1}\\mathbb{E}\\left[z_{i}y_{i}\\right]\n",
+    "$$(eqn:just_beta)\n",
+    "\n",
+    "求得 $\\beta_{0}$ 的封闭解后，我们就可以用样本矩来代替总体矩。这种方法也是一种矩估计。\n",
+    "```{prf:definition} 封闭解\n",
+    "**封闭解**：封闭解(Closed-form solution)，也叫作解析解(Analytic solution)。就是根据严格的推导和计算能够得出解的具体函数，这样在得知任意的自变量的值，就能够根据表达式计算出具体的解。与之相对的是数值解(numerical solution)，指的是不能通过计算得出具体的函数形式的解，只能够通过逼近或者插值等方法求解出特定问题对应的近似解的数值。\n",
+    "```\n",
+    "```{prf:definition} 正交条件\n",
+    "**正交条件**：前面提到，$\\mathbb{E}\\left[z_{i}\\epsilon_{i}\\right]=0_{L}$ 。这是由工具变量所提供的总体矩条件。而在统计学中，如果两个随机变量乘积的期望为0，则称这两个随机变量正交。因此，通常总体矩条件也会被称之为正交条件(orthogonality conditions)\n",
+    "```\n",
+    "而当 $L>K$ ，模型过度识别(over identification)。同样可以根据正交条件得到：\n",
     "\n",
     "$$\n",
     "\\Sigma\\beta_{0}=\\mathbb{E}\\left[z_{i}y_{i}\\right],\n",
     "$$(eq:moment2)\n",
     "\n",
-    "但由于 $\\Sigma$ 不是一个方阵，因此不能像 {eq}`eqn:just_beta` 一样直接对 $\\Sigma$ 求逆来写出 $\\beta_{0}$ 。\n",
-    "为了找到 $\\beta$ 的封闭形式，我们可以定义目标函数：\n",
+    "但由于 $\\Sigma$ 不是一个方阵，因此不能像 {eq}`eqn:just_beta` 一样直接对 $\\Sigma$ 求逆矩阵来计算 $\\beta_{0}$ 。\n",
+    "为了求解 $\\beta$ ，我们可以定义目标函数\n",
     "\n",
     "$$\n",
-    "Q\\left(\\beta\\right)=\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]\n",
+    "Q\\left(\\beta\\right)=\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right].\n",
     "$$\n",
     "\n",
-    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵(我们将在后面讨论如何选择 $W$)。由于它是二次型，所有的 $\\beta$ 都满足 $Q\\left(\\beta\\right)\\geq 0$ 。**识别** 意味着 $Q\\left(\\beta\\right)=0$，该等式当且仅当 $\\beta=\\beta_{0}$ 成立。从而我们可以得到结论：\n",
+    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵(如何选择 $W$ 的问题我们也将在后面讨论到)。由于 $Q\\left(\\beta\\right)$ 为二次型，依据正定矩阵的定义，无论 $\\beta$ 为何值都满足 $Q\\left(\\beta\\right)\\geq 0$ 。同时 **识别** 又意味着等式 $Q\\left(\\beta\\right)=0$ 当且仅当 $\\beta=\\beta_{0}$ 时成立。于是结合上述两个式子可以得到：\n",
     "\n",
     "$$\n",
     "\\beta_{0}=\\arg\\min_{\\beta}Q\\left(\\beta\\right)\n",
     "$$\n",
     "\n",
-    "是唯一的极小值。\n",
-    "因为 $Q\\left(\\beta\\right)$ 是一个 $\\beta$ 的光滑函数， 其极小值可以用一阶条件来求得：\n",
+    "即 $\\beta_{0}$ 是目标函数 $Q\\left(\\beta\\right)$ 取到最小值时对应的唯一变量值。\n",
+    "又因为 $Q\\left(\\beta\\right)$ 是一个 $\\beta$ 的光滑函数， $\\beta_{0}$ 可以用一阶条件来计算：\n",
     "\n",
     "$$\n",
     "0_{K}=\\frac{\\partial}{\\partial\\beta}Q\\left(\\beta_{0}\\right)=-2\\Sigma'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta_{0}\\right)\\right].\n",
@@ -100,7 +106,7 @@
     "\\beta_{0}=\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\mathbb{E}\\left[z_{i}y_{i}\\right].\n",
     "$$(eq:over_beta)\n",
     "\n",
-    "由于模型中矩($L$)的数量比未知参数($K$)更多，我们称之为**广义矩估计** 。\n"
+    "由于模型中矩的数量 $L$ 比未知参数 $K$ 更多，我们称之为**广义矩估计** 。\n"
    ]
   },
   {
@@ -108,9 +114,7 @@
    "id": "b22a29cf",
    "metadata": {},
    "source": [
-    "```{admonition} 评注 11.1\n",
-    "上述等式可以通过在 {eq}`eq:moment2` 两边同时乘上 $\\Sigma'W$ 得到，从而避免了求解最小值的问题。\n",
-    "```\n"
+    "上述等式也可以通过在 {eq}`eq:moment2` 两边同时乘上 $\\Sigma'W$ 得到，从而避免了求解最小值的问题。"
    ]
   },
   {
@@ -118,8 +122,7 @@
    "id": "d7209b9a",
    "metadata": {},
    "source": [
-    "```{admonition} 评注 11.2\n",
-    "尽管我们把恰好识别和过度识别分开讨论，实际上前者 {eq}`eqn:just_beta` 是后者 {eq}`eq:over_beta` 的一种特殊情况。从这个角度上说，GMM是真正意义上的“广义”的矩估计。要理解这个概念，需要注意到当 $L=K$ 时， 由于 $\\Sigma$ 是一个方阵，给定任意的 $W$ 我们能够得到：\n",
+    "尽管我们把恰好识别和过度识别分开讨论，实际上前者 {eq}`eqn:just_beta` 是后者 {eq}`eq:over_beta` 的一种特殊情况。从这个角度上说，GMM是真正意义上的“广义”的矩估计。要理解这个概念，需要注意到当 $L=K$ 时， 由于 $\\Sigma$ 是方阵，给定任意的 $W$ 都能得到：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -127,8 +130,7 @@
     " & =\\Sigma^{-1}W^{-1}W\\mathbb{E}\\left[z_{i}y_{i}\\right]=\\Sigma^{-1}\\mathbb{E}\\left[z_{i}y_{i}\\right],\\end{aligned}\n",
     "$$\n",
     " \n",
-    "也就是说，在恰好识别的情况下， $W$ 没有起到作用，因为任何的 $W$ 都会得到相同的 $\\beta_{0}$ 。\n",
-    "```"
+    "也就是说，在恰好识别的情况下 $W$ 不会对结果产生任何的影响，任何的 $W$ 都会得到相同的 $\\beta_{0}$ 。"
    ]
   },
   {
@@ -138,7 +140,7 @@
    "source": [
     "## GMM估计量\n",
     "\n",
-    "在现实中，我们使用样本矩来代替对应的总体矩。GMM估计量模仿它的总体公式：\n",
+    "在现实中，我们使用样本矩来代替对应的总体矩。依照它的总体公式写出GMM估计量表达式：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -163,7 +165,7 @@
    "id": "8ecbd2f9",
    "metadata": {},
    "source": [
-    "```{admonition} 练习 11.1\n",
+    "```{prf:exercise} \n",
     "同样的GMM估计量 $\\hat{\\beta}$ 可以通过最小化如下函数得到：\n",
     "\n",
     "$$\n",
@@ -184,7 +186,8 @@
     "现在我们来验证 $\\widehat{\\beta}$ 的渐近性质。以下是一系列的假设：\n",
     "\n",
     "\n",
-    "```{admonition} 假设 11.1(A.1)\n",
+    "```{prf:assumption} 假设 11.1\n",
+    ":label: A.1\n",
     "$Z'X/n\\stackrel{\\mathrm{p}}{\\to}\\Sigma$ 和 $Z'\\epsilon/n\\stackrel{\\mathrm{p}}{\\to}0_{L}$\n",
     "```\n",
     "\n",
@@ -198,10 +201,10 @@
    "source": [
     "```{admonition} 定理 11.1 \n",
     "\n",
-    "基于假设 A.1 ， $\\widehat{\\beta}$ 是相合的。\n",
+    "基于假设{prf:ref}`A.1`， $\\widehat{\\beta}$ 是相合的。\n",
     "```\n",
     "\n",
-    "**证明** ：这里的证明步骤于证明OLS估计量的相合性类似：\n",
+    "**证明** ：这里的证明步骤与证明OLS估计量的相合性类似\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -218,9 +221,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "为了验证渐近的正态性，我们假设中心极限定理可以适用。\n",
+    "为了验证渐近的正态性，我们假设中心极限定理成立。\n",
     "\n",
-    "```{admonition} 假设 11.2(A.2) \n",
+    "```{prf:assumption}\n",
+    ":label: A.2\n",
     "$$\n",
     "\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}z_{i}\\epsilon_{i}\\stackrel{d}{\\to}N\\left(0_{L},\\Omega\\right)\n",
     "$$\n",
@@ -229,8 +233,8 @@
     "```\n",
     "\n",
     "\n",
-    "```{admonition} 定理 11.2 (渐进正态性)\n",
-    "基于假设 A.1 和 A.2 有：\n",
+    "```{prf:theorem} 定理 11.2 (渐进正态性)\n",
+    "基于假设{prf:ref}`A.1` 和{prf:ref}`A.2`有：\n",
     "\n",
     "$$\n",
     "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta_{0}\\right)\\stackrel{d}{\\to}N\\left(0_{K},\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\Omega W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}\\right).\\label{eq:normality}.\n",
@@ -251,7 +255,7 @@
     "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta_{0}\\right)=\\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{Z'\\epsilon}{\\sqrt{n}}=\\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}z_{i}'\\epsilon_{i}.\n",
     "$$(eq:as_normal)\n",
     "\n",
-    "依据 Slutsky's theorem ，就能得到结论如下：\n",
+    "依据{prf:ref}`A.1`和{prf:ref}`A.2`，就能得到结论如下：\n",
     "\n",
     "$$\n",
     "\\frac{X'Z}{n}W\\frac{Z'X}{n}\\stackrel{\\mathrm{p}}{\\to}\\Sigma'W\\Sigma\n",
@@ -261,7 +265,9 @@
     "\n",
     "$$\n",
     "\\frac{X'Z}{n}W\\frac{1}{\\sqrt{n}}\\sum z_{i}'\\epsilon_{i}\\stackrel{d}{\\to}\\Sigma'W\\times N\\left(0,\\Omega\\right)\\sim N\\left(0,\\Sigma'W\\Omega W\\Sigma\\right).\n",
-    "$$\n"
+    "$$\n",
+    "\n",
+    "根据上述两个式子，代入{eq}`eq:as_normal`，并使用Slusky's Theorem，就能得到方差最小的有效估计量。"
    ]
   },
   {
@@ -271,13 +277,12 @@
    "source": [
     "### 有效GMM\n",
     "\n",
-    "从 {eq}`eq:as_normal` 中我们可以清楚地知道，GMM估计量的渐近方差依赖于 $W$ 的选择。 哪一个 $W$ 会使得渐近方差尽可能小呢?\n",
-    "答案是 $W=\\Omega^{-1}$。将其代入渐近方差的公式，它我们能够得到如下有效渐近方差\n",
+    "从 {eq}`eq:as_normal` 中我们可以清楚地知道，GMM估计量的渐近方差取决于 $W$ 。 哪一个 $W$ 会使得渐近方差尽可能小呢?\n",
+    "答案是 $W=\\Omega^{-1}$。将其代入公式就能得到有效渐近方差\n",
     "\n",
     "$$\n",
     "\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}\\Sigma'\\Omega^{-1}\\Omega\\Omega^{-1}\\Sigma\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}=\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}.\n",
-    "$$\n",
-    "\n"
+    "$$\n"
    ]
   },
   {
@@ -286,7 +291,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "```{admonition} 命题 11.1 \n",
+    "```{prf:proposition}  \n",
     "对于任意的正定对称矩阵 $W$ ，它与渐近方差之间的差：\n",
     "\n",
     "$$\n",
@@ -316,7 +321,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "注意到：\n",
+    "注意到\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -325,8 +330,8 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "该式能够得到： $B'\\Omega\\left(A-B\\right)=0$ 和\n",
-    "$\\left(A-B\\right)'\\Omega B=0$ 。进而可以得到结论：\n",
+    "该式能够得到 $B'\\Omega\\left(A-B\\right)=0$ 和\n",
+    "$\\left(A-B\\right)'\\Omega B=0$ 。进而可以得到结论\n",
     "\n",
     "$$\n",
     "\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\Omega W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}-\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}=\\left(A-B\\right)'\\Omega\\left(A-B\\right)\n",
@@ -342,29 +347,33 @@
    "source": [
     "### 两阶段GMM\n",
     "\n",
-    "**两阶段GMM** 能够构造可行的有效GMM估计量。\n",
+    "**两阶段GMM** 能够用来构造可行的有效GMM估计量。\n",
+    "```{prf:definition} 可行估计量\n",
+    "这里的可行估计量指的是不带有任何的位置参数，可以直接利用数据计算的统计量。与之相对的，不可行统计量的表达式中存在需要估计的未知参数，不能直接通过数据求解不可行统计量\n",
+    "```\n",
     "\n",
-    "1.  如果我们选定任意 $W$ ，并且令 $W=I_{L}$ 从而得到相合 (但通常不有效) 的估计量：\n",
+    "1.  如果我们选定任意 $W$ ，比如令 $W=I_{L}$ ，从而得到相合 (但通常不有效) 的估计量\n",
     "    $\\hat{\\beta}^{\\sharp}=\\hat{\\beta}^{\\sharp}\\left(W\\right)$ 。 \n",
     "    计算残差 $\\widehat{\\epsilon}_{i}=y_{i}-x_{i}'\\hat{\\beta}^{\\sharp}$\n",
-    "    并估计方差矩阵：\n",
-    "    $\\widehat{\\Omega}=\\frac{1}{n}\\sum z_{i}z_{i}'\\widehat{\\epsilon}_{i}^{2}.$ 。注意，这个 $\\widehat{\\Omega}$\n",
+    "    并估计方差矩阵\n",
+    "    $\\widehat{\\Omega}=\\frac{1}{n}\\sum z_{i}z_{i}'\\widehat{\\epsilon}_{i}^{2}$ 。这时 $\\widehat{\\Omega}$\n",
     "    与 $\\Omega$ 相合。\n",
     "\n",
     "  \n",
-    "2.  设 $W=\\widehat{\\Omega}^{-1}$ ，获得第二个估计量：\n",
+    "2.  设定 $W=\\widehat{\\Omega}^{-1}$ ，获得第二个估计量：\n",
     "\n",
     "$$\n",
     "\\widehat{\\beta}^{\\natural}=\\widehat{\\beta}^{\\natural}(\\widehat{\\Omega}^{-1})=\\left(X'Z\\widehat{\\Omega}^{-1}Z'X\\right)^{-1}X'Z\\widehat{\\Omega}^{-1}Z'y.\n",
     "$$\n",
     "\n",
     "第二个估计量是渐近有效的。\n",
-    "```{admonition} 练习 11.2 \n",
+    "```{prf:exercise} 练习 11.2 \n",
     "可以看出如果 $\\widehat{\\Omega}\\stackrel{p}{\\to}\\Omega$，那么\n",
     "$\\sqrt{n}\\left(\\widehat{\\beta}^{\\natural}(\\widehat{\\Omega}^{-1})-\\widehat{\\beta}\\left(\\Omega^{-1}\\right)\\right)\\stackrel{p}{\\to}0$ 。\n",
     "换言之，可行估计量\n",
     "$\\widehat{\\beta}^{\\natural}(\\widehat{\\Omega}^{-1})$ 渐近等同于不可行但有效的估计量\n",
     "$\\widehat{\\beta}\\left(\\Omega^{-1}\\right)$ 。\n",
+    "\n",
     "```"
    ]
   },
@@ -375,7 +384,7 @@
    "source": [
     "### 两阶段最小二乘(2SLS)\n",
     "\n",
-    "如果我们进而假设满足条件同方差：\n",
+    "如果我们假设条件同方差成立：\n",
     "$\\mathbb{E}\\left[\\epsilon_{i}^{2}|z_{i}\\right]=\\sigma^{2}$，那么：\n",
     "\n",
     "$$\n",
@@ -391,14 +400,14 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "当 $L>K$ 时，这个表达式与 2SLS 表达式完全一致。因此， 两阶段最小二乘可以被视为GMM带有伴随矩阵 $\\left(Z'Z/n\\right)^{-1}$ 的特例。在条件同方差假设下，2SLS 是有效估计量。然而，尽管 2SLS 十分流行，但在异方差的情况下它不是有效估计量。\n",
+    "当 $L>K$ 时，这个表达式与 2SLS 表达式完全一致。因此， 两阶段最小二乘可以被视为带有权重矩阵 $\\left(Z'Z/n\\right)^{-1}$ 的特殊GMM。在条件同方差假设下，2SLS 是有效估计量。尽管 2SLS 十分受学者们的欢迎，但在异方差的情况下它并不是有效估计量。\n",
     "\n",
-    "```{admonition} 评注 11.3\n",
-    "2SLS 得名于它通过两步得到回归结果: 首先用所有工具变量 $Z$ 对 $X$ 进行回归，之后用对应的值和包含的外生变量对 $y$ 进行回归。然而，通过上述等式，2SLS实际上可以一步得到，因为它是GMM的特例。\n",
+    "```{prf:remark} 评注 11.3\n",
+    "就如同它的名字一样，2SLS 的计算分为两步: 首先用所有工具变量 $Z$ 对 $X$ 进行回归，之后用计算得到的预测值对 $y$ 进行回归。不过，2SLS实际上可以通过上述等式一步得到，因为它是GMM的特例。\n",
     "```\n",
     "\n",
-    "```{admonition} 评注 11.4\n",
-    "如果有效估计量不难找，计量经济学者会更倾向于使用有效估计量。使用有效估计量的好处不仅仅在于系数估计更加精确。许多专门的检验，比如之后我们将介绍的 $J$-统计量，将依赖于有效估计量在原假设中得到 $\\chi^{2}$ 分布。否则它们的渐进分布将是不标准的，分布的临界值将只能用蒙特卡罗方法(Monte Carlo simulations)才能找到。\n",
+    "```{prf:remark} 评注 11.4\n",
+    "如果有效估计量不难计算，计量经济学者会更倾向于使用有效估计量。使用有效估计量的好处不仅仅在于系数估计更加精确。许多专门的检验，比如之后我们将介绍的 $J$-统计量，将依赖于有效估计量在原假设中得到 $\\chi^{2}$ 分布。否则它们的渐进分布将是非标准的，分布的临界值将只能用蒙特卡罗方法(Monte Carlo simulations)才能找到。\n",
     "```"
    ]
   },
@@ -410,7 +419,7 @@
     "## 非线性GMM模型\n",
     "\n",
     "GMM 的原理也适用于矩条件中存在非线性参数的模型。\n",
-    "令 $g_{i}\\left(\\beta\\right)=g\\left(w_{i},\\beta\\right)\\mapsto\\mathbb{R}^{L}$ 为 $w_{i}$ 和参数 $\\beta$ 的函数。如果在经济学理论中 $\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]=0$ (统计学家称之为 **估计方程**) 我们就可以将 GMM 总体标准方程写作：\n",
+    "令 $g_{i}\\left(\\beta\\right)=g\\left(s_{i},\\beta\\right)\\mapsto\\mathbb{R}^{L}$ 为 $s_{i}$ 和参数 $\\beta$ 的函数。如果在经济学理论中 $\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]=0$ (统计学家称之为 **估计方程**) 我们就可以将 GMM 总体目标方程写作：\n",
     "\n",
     "$$\n",
     "Q\\left(\\beta\\right)=\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]'W\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]\n",
@@ -418,24 +427,24 @@
     "\n",
     "```{admonition} Example 11.1\n",
     "线性模型是非线性模型的一种特殊情况。在前面章节提到的线性工具变量模型中，数据是\n",
-    "$w_{i}=\\left(y_{i},x_{i},z_{i}\\right)$，且矩函数为\n",
-    "$g\\left(w_{i},\\beta\\right)=z_{i}'\\left(y_{i}-x_{i}\\beta\\right)$.\n",
+    "$s_{i}=\\left(y_{i},x_{i},z_{i}\\right)$，且矩函数为\n",
+    "$g\\left(s_{i},\\beta\\right)=z_{i}'\\left(y_{i}-x_{i}\\beta\\right)$.\n",
     "```\n",
-    "在现实中，我们用样本矩来表示标准函数中的总体矩：\n",
+    "在现实中，我们用样本矩来逼近目标函数的总体矩：\n",
     "\n",
     "$$\n",
     "Q_{n}\\left(\\beta\\right)=\\left(\\frac{1}{n}\\sum_{i=1}^{n}g_{i}\\left(\\beta\\right)\\right)'W\\left(\\frac{1}{n}\\sum_{i=1}^{n}g_{i}\\left(\\beta\\right)\\right).\n",
     "$$\n",
     "\n",
-    "GMM估计量被定义为：\n",
+    "GMM估计量为：\n",
     "\n",
     "$$\n",
     "\\hat{\\beta}=\\arg\\min_{\\beta}Q_{n}\\left(\\beta\\right).\n",
     "$$ \n",
     "\n",
-    "这些非线性模型往往得不到一个封闭解，但是渐近性质依然成立。在此我们不给出具体证明，对这些渐近性质仅作介绍： \n",
+    "尽管这些非线性模型往往不存在封闭解，但是它们的渐近性质依然成立。在此我们不给出具体证明，对这些渐近性质作一下简要介绍： \n",
     "\n",
-    "```{admonition} 定理 11.3 \n",
+    "```{prf:theorem} 定理 11.3 \n",
     "(a) 如果模型是可识别的，且对于任意常数 $\\varepsilon>0$ \n",
     "\n",
     "$$\n",
@@ -458,14 +467,14 @@
     "其中\n",
     "$\\Omega=\\mathbb{E}\\left[g_{i}\\left(\\beta_{0}\\right)g_{i}\\left(\\beta_{0}\\right)'\\right]$.\n",
     "\n",
-    "(c) 如果我们选 $W=\\Omega^{-1}$ ，于是该估计量有效，\n",
+    "(c) 如果我们令 $W=\\Omega^{-1}$ ，能够得到有效估计量，\n",
     "渐近方差会变为：\n",
     "$\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}$.\n",
-    "```{admonition} 评注 11.5\n",
-    "上述的这些假设并非全部假设。我们只陈列出了关键部分，略过了其中的一些技术细节。\n",
+    "```{prf:remark} 评注 11.5\n",
+    "以上只列出了几个关键假设，而略过了其中的一些技术细节。\n",
     "```\n",
-    "$Q_{n}\\left(\\beta\\right)$ 计算这些矩与0的距离。适当的放缩后，它可以作为一个检验统计量。在原假设 $\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]=0_{L}$ 中，\n",
-    "Sargan-Hansen $J$-检验 验证了模型是否违反了矩条件。该检验统计具体如下：\n",
+    "$Q_{n}\\left(\\beta\\right)$ 是测算这些矩与0之间距离的距离函数。适当的放缩后，它可以作为一个检验统计量。在原假设 $\\mathbb{E}\\left[g_{i}\\left(\\beta\\right)\\right]=0_{L}$ 中，\n",
+    "Sargan-Hansen $J$-检验可以帮助我们判断模型是否违反了矩条件。该检验统计具体如下：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -474,8 +483,8 @@
     "$$\n",
     "\n",
     "其中 $\\widehat{\\Omega}$ 是 $\\Omega$ 的相合估计量，且\n",
-    "$\\widehat{\\beta}$ 是一个有效估计量，比如两阶段\n",
-    "GMM 估计量 $\\widehat{\\beta}^{\\natural}(\\widehat{\\Omega}^{-1})$ 。这个统计量在分布中会收敛于一个自由度为 $L-K$ 的 $\\chi^{2}$ 随机变量。也就是说，在原假设中：\n",
+    "$\\widehat{\\beta}$ 是一个有效估计量，例如两阶段\n",
+    "GMM 估计量 $\\widehat{\\beta}^{\\natural}(\\widehat{\\Omega}^{-1})$ 。在分布中 $J$ 统计量会收敛于一个自由度为 $L-K$ 的 $\\chi^{2}$ 随机变量。也就是说，在原假设中：\n",
     "\n",
     "$$\n",
     "J\\left(\\widehat{\\beta}\\right)\\stackrel{d}{\\to}\\chi^{2}\\left(L-K\\right).\n",
@@ -491,13 +500,13 @@
    "source": [
     "## 总结\n",
     "\n",
-    " GMM 在计量经济学中的流行是因为经济学理论往往没有足够的信息判断变量间的参数关系，然而许多经济学假设能够得出矩约束条件。例如，**有效市场假设** 表明未来的价格走势 $\\Delta p_{t+1}$ 不能用过去公开的信息集 $\\mathscr{I}_{t}$ 预测，因此 $\\mathbb{E}\\left[\\Delta p_{t+1}|\\mathscr{I}_{t}\\right]=0$ 。它表明信息集 $\\mathscr{I}_{t}$ 中变量的任意函数都与 $\\Delta p_{t+1}$ 正交。\n",
-    "于是我们可以建立一系列矩条件来检验有效市场假设。尽管GMM不难理解，但是在现实中它会遇到各种问题。因此有大量的经济学文献讨论GMM的局限性和它们的解决办法。\n",
+    " 经济学理论往往没有足够的信息直接判断变量间的参数关系，而许多经济学假设中却都蕴含着矩约束条件，因此利用矩进行估计的GMM在计量研究中备受学者们的欢迎。例如，**有效市场假设** 表明未来的价格走势 $\\Delta p_{t+1}$ 不能用过去公开的信息集 $\\mathscr{I}_{t}$ 来准确预测，也就是 $\\mathbb{E}\\left[\\Delta p_{t+1}|\\mathscr{I}_{t}\\right]=0$ 。它表明信息集 $\\mathscr{I}_{t}$ 中变量的任意函数都与 $\\Delta p_{t+1}$ 正交。\n",
+    "于是我们可以建立一系列矩条件来检验有效市场假设。尽管GMM不难理解，并且有良好的渐近性质，但是在现实中它会遇到各种问题。因此有大量的经济学文献讨论GMM的局限性和它们的解决办法。\n",
     "\n",
     "**历史轶闻**: 2SLS 的发现归功于 {cite}`theil1953repeated` 。在线性工具变量模型中， $J$-统计量由\n",
-    "{cite}`sargan1958estimation` 提出，且 {cite}`hansen1982large` 把它推广到非线性模型中。\n",
+    "{cite}`sargan1958estimation` 提出。 {cite}`hansen1982large` 把它推广到非线性模型中。\n",
     "\n",
-    "**拓展阅读**:  GMM 的二次型形式使得它在面对大量数据时很难建立足够多的矩。**经验似然** 是另一种可供选择的方法，它可以用来进行矩约束模型的估计。{cite}`shi2016econometric` 在经验似然的研究框架下解决了高维矩的估计问题。\n",
+    "**拓展阅读**:  在面对大量数据时，GMM 的二次型将要面对大量的矩条件。然而现实情况是，在有大量的矩条件时，往往不能很好地估计每一个矩来 拟合我们感兴趣的参数。 **经验似然** 是另一种可供选择的方法，它可以用来进行矩约束模型的估计。{cite}`shi2016econometric` 在经验似然的研究框架下解决了高维矩的估计问题。\n",
     "\n",
     "\n"
    ]
