working on lec2

--- a/Lecture2-CN.ipynb
+++ b/Lecture2-CN.ipynb
@@ -36,7 +36,7 @@
     "## 条件期望\n",
     "\n",
     "条件期望是数据预测理论中一个非常重要的概念。\n",
-    "机器学习是一揽子处理数据的算法, 回归分析也包含于其中。回归是一种**监督学习** (*supervised leaning*)。 监督式学习用 $x$ 的函数 (比如 $g(x)$ )来预测 $y$ ，然而除非二者之间是确定性的关系, 否则 $x$ 对 $y$ 并不能完全精准地预测。而预测误差 $y-g(x)$ 依赖于函数 $g$ 的选择。我们如何才能从各种各样的可选函数中找到最优的 $g$ 来帮助我们做预测呢? 由于我们并不关心相应联合分布 $(y,x)$ 的数据生成过程 (*data generating process*, 简记 DGP)，我们希望能找到一种通用的方法，无论 $(x,y)$ 随机变量是怎样生成的，我们都可以用它来进行精准的预测。"
+    "机器学习是一揽子处理数据的算法, 回归分析也包含于其中。回归是一种**监督学习** (*supervised leaning*)。 监督式学习用 $x$ 的函数 (比如 $g(x)$ )来预测 $y$ ，然而除非二者之间是确定性的关系, 否则 $x$ 对 $y$ 并不能完全精准地预测。而预测误差 $y-g(x)$ 依赖于函数 $g$ 的选择。我们如何才能从各种各样的可选函数中找到最优的 $g$ 来帮助我们做预测呢? 由于我们并不关心相应联合分布 $(y,x)$ 的数据生成过程 (*data generating process*, 简记 DGP)，我们希望能找到一种通用的方法，无论 $(x,y)$ 随机变量是怎样生成的，我们都可以用它来进行尽量精准的预测。"
    ]
   },
   {
@@ -44,20 +44,21 @@
    "id": "51e5ea7c",
    "metadata": {},
    "source": [
-    "我们来看如何用决策理论处理这个问题。这一问题的关键在于, 我们用什么标准来比较不同 $g$ 的优劣。这个标准就是**损失函数**, 常记为$L(y,g(x))$ 。一种常见的损失函数是 **平方损失** (*quadratic loss*) \n",
+    "我们用决策理论来处理这个问题。其关键在于, 我们选择什么标准来比较不同 $g$ 的优劣。这个标准称为**损失函数**, 常记为$L(y,g(x))$ 。 **平方损失**  (*quadratic loss*) \n",
     "\n",
     "$$\n",
     "L(y,g(x))=(y-g(x))^2.\n",
     "$$\n",
     "\n",
+    "是一种常见的损失函数。\n",
     "由于数据的随机性， 损失函数 $L(y,g(x))$ 也是随机的。 这里的\"随机\"意味着不确定性， 即使在同一分布下， 每次抽样也可能产生不同的结果。 为了摆脱这种随机性的影响， 我们根据联合分布 $(y,x)$ 对损失函数取数学期望,得到 $R(y,g(x))=E[L(y,g(x))]$, 我们将其称为**风险**. \n",
-    "与损失函数不同, 风险是一个确定性的量. 与平方损失函数对应的风险是\n",
+    "与损失函数不同, 风险是一个确定性的量。与平方损失函数相对应的风险是 **均方误差** (*mean square error*, 简记MSE)\n",
     "\n",
     "$$\n",
     "R(y,g(x))=E\\left[(y-g(x))^2 \\right],\n",
     "$$\n",
     "\n",
-    "被称为**均方误差** (*mean square error*, 简记MSE)。 均方误差是最常用的风险测度方法，尽管文献中还有其他可替代的度量, 例如**平均绝对误差** (*mean absolute error*, 简记MAE) $E[|y-g(x)|]$ 等。"
+    "均方误差是最常用的风险测度方法，虽然文献中还有其他可替代的度量, 例如**平均绝对误差** (*mean absolute error*, 简记MAE) $E[|y-g(x)|]$ 等。"
    ]
   },
   {
@@ -65,7 +66,7 @@
    "id": "7958fc74",
    "metadata": {},
    "source": [
-    "我们不禁会好奇, 为什么MSE如此受欢迎? 它有什么优点? 实际上, 由于其良好的函数形式, 使用MSE往往能帮助我们较为方便地求出解析解。 反观其他的风险函数如MAE, 由于其不可微性, 会给计算解析解带来一些不必要的困难。 在经济学中, 效用函数的选择也有着类似的考量。 我们通常只选择几种函数形式, 如CRRA效用函数， CARA效用函数等，这些函数形式得以广泛使用也是因为它们往往能够较为便捷地求得封闭式的解析解。"
+    "均方误差之所以好用，是因为它的特定函数形式往往能帮助我们较为方便地求出解析解。反观其他的风险函数如平均绝对误差, 由于其不可微性, 会给计算解析解带来困难。 在经济学中, 效用函数的选择也有着类似的考量。我们通常只选择几种函数形式, 如CRRA效用函数，CARA效用函数等，这些函数形式得以广泛使用也是因为它们往往能够较为便捷地求得解析解。"
    ]
   },
   {
@@ -73,18 +74,27 @@
    "id": "6addd1e8",
    "metadata": {},
    "source": [
-    "明确了比较的标准， 我们的问题便十分清晰了: 如果我们的目标是最小化均方误差MSE， 那么函数$g$的最优选择是什么?\n",
+    "明确了比较的标准， 我们的问题便十分清晰了: 如果我们的目标是最小化均方误差， 那么什么是函数 $g$ 的最优选择?\n",
     "\n",
     "```{prf:proposition} \n",
-    "条件均值函数 (*conditional mean function*, 即CEF) $m(x)=E[y|x]=\\int yf(y|x)dy$ 的MSE最小。\n",
-    "```\n",
-    "在证明上述命题之前, 我们先对条件均值函数的性质进行一些讨论. 显然, 我们有\n",
+    "条件均值函数 (*conditional mean function*, 即CEF) $m(x)=E[y|x]=\\int yf(y|x)dy$ 可以最小化均方误差。\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "030dbc29",
+   "metadata": {},
+   "source": [
+    "\n",
+    "在证明上述命题之前, 我们先讨论条件均值函数的一些性质。定义 $\\varepsilon:=y-m(x)$。显然, 可以对 $y$ 进行如下分解：\n",
     "\n",
     "$$\n",
     "y=m(x)+(y-m(x))=m(x)+\\varepsilon,\n",
     "$$\n",
     "\n",
-    "其中$\\varepsilon:=y-m(x)$称为 **回归误差** (*regression error*)。 只要条件期望$E[y|x]$存在, 无论 $(y,x)$ 服从何种分布, 该等式都成立。 误差项$\\varepsilon$具有以下性质：\n",
+    "只要条件期望$E[y|x]$存在, 无论 $(y,x)$ 服从何种分布, 该等式都成立。 我们将 $\\varepsilon$ 称为 **回归误差** (*regression error*)。\n",
+    "误差项 $\\varepsilon$ 具有以下性质：\n",
     "\n",
     "- $E[y|x]=E[y-m(x)|x]=E[y|x]-m(x)=0$,\n",
     "\n",
@@ -96,9 +106,16 @@
     "  E[h(x)\\varepsilon]=E[E[h(x)\\varepsilon|x]]=E[h(x)E[\\varepsilon|x]]=0.\\tag{2.1}\n",
     "  $$\n",
     "\n",
-    "最后一个性质表明， $\\varepsilon$ 与 $x$ 的任何函数都不相关。 特别地， 当 $h(x)=x$ 时有 $E[x\\varepsilon]=Cov(x,\\varepsilon)$=0 。\n",
+    "最后一个性质表明， $\\varepsilon$ 与 $x$ 的任何函数都不相关。 特别地， 当 $h(x)=x$ 时有 $E[x\\varepsilon]=Cov(x,\\varepsilon)$=0 。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8da0275f",
+   "metadata": {},
+   "source": [
     "\n",
-    "**命题2.1的证明**  我们首先猜测CEF是最优解, 然后验证它确实是最优解: 对于每个取得的函数 $g$ 验证CEF至少不比$g$差, 这一思路可以称为先猜后证 (\"guess-and-verify\")。 对任给的 $g(x)$ ， 其MSE可以分解为三部分：\n",
+    "**命题2.1的证明**  我们采用先猜后证 (\"guess-and-verify\") 的思路。 我们首先猜测CEF是最优解, 然后验证它确实是最优解: 对于任意一个函数 $g$ 验证CEF至少不比$g$差。对任给的 $g(x)$，其均方误差可以分解为三部分：\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
