slight change on Chapter 3

--- a/lecture3-CN.ipynb
+++ b/lecture3-CN.ipynb
@@ -64,7 +64,7 @@
     "最小二乘法 (OLS) 是计量经济学中最基本的估计方法, 它简单透明, 易于理解. 了解最小二乘法, 有助于我们研究更复杂的线性估计方法. 此外, 许多非线性估计量在真实值附近与线性估计量的行为是类似的. 在本讲义中, 我们将从线性代数的运算讲起, 学习一系列的知识. \n",
     "\n",
     "\n",
-    "套用Leopold Kronecker的名言 \"上帝创造了整数, 其他都是人的作品\", 我想说 \"高斯创造了最小二乘法, 其他都是应用研究者的作品\". 在科学界, 最小二乘法的受欢迎程度远远超出了人们的想象. 但要注意的是, 最小二乘法是一种纯统计学的方法, 或者说是一种监督式机器学习的方法, 因此它揭示的是相关关系, 而非因果关系. 相反, 经济理论假设因果关系的存在, 然后我们收集数据来检验理论或量化效果. \n"
+    "套用Leopold Kronecker的名言 \"上帝创造了整数, 其他都是人的作品\", 我想说 \"高斯创造了最小二乘法, 其他都是应用研究者的作品\". 在科学界, 最小二乘法的受欢迎程度远远超出了人们的想象. 然而, 最小二乘法是一种纯统计学的方法, 或者说是一种监督式机器学习的方法, 因此它揭示的是相关关系, 而非因果关系. 相反, 经济理论假设因果关系的存在, 然后我们收集数据来检验理论或量化效果. \n"
    ]
   },
   {
@@ -102,7 +102,7 @@
     "Q\\left(b\\right)=\\frac{1}{2n}\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}=\\frac{1}{2n}\\left(Y-Xb\\right)'\\left(Y-Xb\\right)=\\frac{1}{2n}\\left\\Vert Y-Xb\\right\\Vert ^{2}.\n",
     "$$\n",
     "\n",
-    "残差平方和 $\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}$ 是 $\\Vert Y - Xb \\Vert$ 的平方. \n",
+    "*残差平方和 (sum of squared residuals)*  $\\sum_{i=1}^{n}\\left(y_{i}-x_{i}'b\\right)^{2}$ 是 $\\Vert Y - Xb \\Vert$ 的平方. \n",
     "因为平方 $(\\cdot)^2$ 在 $\\mathbb{R}^+$上严格单调递增，所以用 $b$ 来最小化 $Q(b)$ 等价于最小化欧氏距离. 系数 $\\frac{1}{2n}$ 与 $b$ 无关, 不影响该最优化问题的解.\n"
    ]
   },
@@ -158,7 +158,7 @@
     ":label: remark3\n",
     "\n",
     "如果某些回归因子满足*完全共线性 (perfectly collinear)* , 就违反了 $X'X/n$ 可逆的线性独立的假设. \n",
-    "例如, 使用虚拟变量来表示分类变量并将所有这些类别放入回归模型中时, 通常计量经济学软件会自动检测并指出完全共线性问题. 然而, 难以察觉的是*不完全共线性 (nearly collinear)*, 即 $X'X/n$ 的最小特征值接近于0, 而不等于0. 我们将在渐进理论一章中讨论不完全共线性的后果. \n",
+    "例如, 使用虚拟变量来表示分类变量并将所有这些类别放入回归模型中时, 通常计量经济学软件会自动检测并指出完全共线性问题. 然而, 软件难以侦测*不完全共线性 (nearly collinear)*, 即 $X'X/n$ 的最小特征值接近于0, 而不等于0. 我们将在渐进理论一章中讨论不完全共线性的后果. \n",
     "```"
    ]
   },
@@ -513,7 +513,7 @@
     " \"将 $y_{i}$ 对 $\\left(x_{1i},x_{2i}\\right)$ 做回归\": 给定相同的数据集 $\\left(Y,X_{1},X_{2}\\right)$, 试说明“短”回归的 $R^2$ 不比“长”回归的 $R^2$ 大. 也就是说, 通过增加更多的回归变量, 我们总能使得 $R^2$ 不会变小. ) \n",
     "```\n",
     "\n",
-    "在传统意义上, 回归因子的数量 $K$ 总是远小于样本量 $n$ . 然而, 在大数据时代, (潜在) 回归变量的数量 $K$ 有可能大于样本量 $n$. \n"
+    "在传统意义上, 回归因子的数量 $K$ 总是远小于样本量 $n$ . 然而, 在大数据时代, 回归变量的数量 $K$ 有可能大于样本量 $n$. \n"
    ]
   },
   {
