slight update lec4

--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -166,12 +166,9 @@
     "\\widehat{\\beta}_{k}|X=\\eta_{k}'\\widehat{\\beta}|X\\sim N\\left(\\beta_{k},\\gamma\\eta_{k}'\\left(X'X\\right)^{-1}\\eta_{k}\\right)\\sim N\\left(\\beta_{k},\\gamma\\left[\\left(X'X\\right)^{-1}\\right]_{kk}\\right),\n",
     "$$\n",
     "\n",
-    "其中 \n",
-    "\n",
-    "$$\n",
+    "其中 $\n",
     "\\eta_{k}=\\left(1\\left\\{ l=k\\right\\} \\right)_{l=1,\\ldots,K}\n",
-    "$$ \n",
-    "\n",
+    "$\n",
     "用于选出第 $k$ 个元素。\n",
     "\n",
     "以上表达式中， $\\gamma$ 是一个未知参数。 \n",
@@ -213,16 +210,16 @@
     "$$\n",
     "\\begin{aligned}\n",
     "T_{k} & =\\frac{\\widehat{\\beta}_{k}-\\beta_{k}}{\\sqrt{s^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}} \\\\\n",
-    " & =\\frac{\\widehat{\\beta}_{k}-\\beta_{k}}{\\sqrt{\\sigma^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}}\\cdot\\frac{\\sqrt{\\sigma^{2}}}{\\sqrt{s^{2}}} \\\\\n",
-    " & =\\frac{\\left(\\widehat{\\beta}_{k}-\\beta_{0,k}\\right)/\\sqrt{\\sigma^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}}{\\sqrt{\\frac{e'}{\\sigma}M_{X}\\frac{e}{\\sigma}/\\left(n-K\\right)}},\n",
+    " & =\\frac{\\widehat{\\beta}_{k}-\\beta_{k}}{\\sqrt{\\gamma\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}}\\cdot\\frac{\\sqrt{\\gamma}}{\\sqrt{s^{2}}} \\\\\n",
+    " & =\\frac{\\left(\\widehat{\\beta}_{k}-\\beta_{0,k}\\right)/\\sqrt{\\gamma\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}}{\\sqrt{\\frac{e'}{\\sigma}M_{X}\\frac{e}{\\sigma}/\\left(n-K\\right)}},\n",
     "\\end{aligned}\n",
     "$$(eqn:t-stat)\n",
     "\n",
-    "此时我们引入 $\\sigma^{2}=\\gamma$ 到第二个等式中来帮忙求出分布中最后一个表达式的分子和分母。 \n",
+    "此时我们引入 $\\gamma= \\sigma^{2}$ 到第二个等式中来帮忙求出分布中最后一个表达式的分子和分母。 \n",
     "分子为\n",
     "\n",
     "$$\n",
-    "\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)/\\sqrt{\\sigma^{2}\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}\\sim N\\left(0,1\\right);\n",
+    "\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)/\\sqrt{\\gamma\\left[\\left(X'X\\right)^{-1}\\right]_{kk}}\\sim N\\left(0,1\\right);\n",
     "$$\n",
     "\n",
     "分母 $\\sqrt{\\frac{e'}{\\sigma}M_{X}\\frac{e}{\\sigma}/\\left(n-K\\right)}$ \n",
