small polising of lec1

--- a/lecture1-CN.ipynb
+++ b/lecture1-CN.ipynb
@@ -32,10 +32,17 @@
     "$A_{i}\\in\\mathcal{F}$ ，则对任意\n",
     "$i\\in\\mathbb{N}$ 都有 $A_{i}^{c}\\in\\mathcal{F}$。 因此，如果\n",
     "$\\bigcup_{i\\in\\mathbb{N}}A_{i}^{c}\\in\\mathcal{F}$ ，可以得出\n",
-    "$\\bigcap_{i\\in\\mathbb{N}}A_{i}=(\\bigcup_{i\\in\\mathbb{N}}A_{i}^{c})^{c}\\in\\mathcal{F}$.\n",
+    "$\\bigcap_{i\\in\\mathbb{N}}A_{i}=(\\bigcup_{i\\in\\mathbb{N}}A_{i}^{c})^{c}\\in\\mathcal{F}$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1467707d",
+   "metadata": {},
+   "source": [
     "\n",
     "```{prf:remark} \n",
-    "从直觉来看，$\\sigma$ 域是允许可数 (countable) 个集合进行并集、差集和交集操作的封闭域。因为以上这些都是集合的代数计算，所以 $\\sigma$ 域也叫做 $\\sigma$ 代数。\n",
+    "从直觉来看，$\\sigma$ 域是允许可数(countable)个集合进行并集、差集和交集操作的封闭域。因为以上这些都是集合的代数计算，所以 $\\sigma$ 域也叫做 $\\sigma$ 代数。\n",
     "```\n",
     "\n",
     "```{prf:example}\n",
@@ -118,7 +125,7 @@
     "$$\n",
     "\n",
     "公式 $X:\\Omega\\mapsto\\mathbb{R}$ ($\\left(\\Omega,\\mathcal{F}\\right)\\backslash\\left(\\mathbb{R},\\mathcal{R}\\right)$)\n",
-    "是 **可测函数** (*measurable function*)。 **随机变量** 是可测函数带有浪漫气息的别名。由 **随机变量 $X$ 生成的$\\sigma$ 域** 被定义为\n",
+    "是 **可测函数** (measurable function)。 **随机变量** 是可测函数带有浪漫气息的别名。由 **随机变量 $X$ 生成的$\\sigma$ 域** 被定义为\n",
     "$\\sigma\\left(X\\right)=\\left\\{ X^{-1}\\left(B\\right):B\\in\\mathcal{R}\\right\\}$ 。\n",
     "\n",
     "如果$\\left\\{ X\\left(\\omega\\right):\\omega\\in\\Omega\\right\\}$是有限的或者可数的，\n",
@@ -140,8 +147,7 @@
     "\n",
     "### 分布函数\n",
     "\n",
-    "我们回溯一下几个在本科概率论课程上曾经接触过的概念。**累积分布函数**\n",
-    "（cumulative distribution function，简记CDF） $F:\\mathbb{R}\\mapsto[0,1]$ 被定义为\n",
+    "我们回溯一下几个在本科概率论课程上曾经接触过的概念。**累积分布函数**(cumulative distribution function，简记CDF) $F:\\mathbb{R}\\mapsto[0,1]$ 被定义为\n",
     "\n",
     "$$\n",
     "F\\left(x\\right)=P\\left(X\\leq x\\right)=P\\left(\\{X\\leq x\\}\\right)=P\\left(\\left\\{ \\omega\\in\\Omega:X\\left(\\omega\\right)\\leq x\\right\\} \\right).\n",
@@ -173,7 +179,7 @@
     "(ii) $\\int_{a}^{b}f\\left(x\\right)dx=F\\left(b\\right)-F\\left(a\\right)$ 。\n",
     "\n",
     "```{prf:example}\n",
-    "我们已经学过了许多的参数分布,比如二元分布、泊松分布、均匀分布、指数分布和正态分布, $\\chi^{2}$, $t$, $F$分布等等。这些都是参数分布，意味着较少的参数就能够完全表征出他们的CDF和PDF。\n",
+    "我们已经学过了许多的参数分布，比如二元分布、泊松分布、均匀分布、指数分布和正态分布, $\\chi^{2}$, $t$, $F$分布等等。这些都是参数分布，意味着较少的参数就能够完全表征出他们的CDF和PDF。\n",
     "```"
    ]
   },
@@ -233,7 +239,7 @@
     "\n",
     "如果我们知道了一个离散型随机变量的概率质量函数(probability mass function),它的期望就是 $E\\left[X\\right]=\\sum_{x}xP\\left(X=x\\right)$ ，也就是一个简单函数的积分。如果一个连续型随机变量存在概率密度函数 $f(x)$ , 它的期望可以用\n",
     " $E\\left[X\\right]=\\int xf\\left(x\\right)\\mathrm{d}x$ 计算。这两个表达式被勒贝格\n",
-    "积分统一为 $E[X]=\\int X\\mathrm{d}P$ 。"
+    "积分统一为 $E[X]=\\int X\\mathrm{d}P$。"
    ]
   },
   {
@@ -248,12 +254,10 @@
     "-   事件 $A$ 的概率是指示函数的期望：\n",
     "    $E\\left[1\\left\\{ A\\right\\} \\right]=1\\times P(A)+0\\times P(A^{c})=P\\left(A\\right)$.\n",
     "\n",
-    "-   $E\\left[X^{r}\\right]$ 被称为 $X$ 的 $r$ 阶矩。一个随机变量的**均值**\n",
-    "    是其一阶矩 $\\mu=E\\left[X\\right]$ ；而二阶 **中心** 矩叫做 $\\mathrm{var}\\left[X\\right]=E\\left[\\left(X-\\mu\\right)^{2}\\right]$ \n",
-    "    方差。\n",
+    "-   $E\\left[X^{r}\\right]$ 被称为 $X$ 的 $r$ 阶矩。一个随机变量的**均值**是其一阶矩 $\\mu=E\\left[X\\right]$ ；而二阶 **中心** 矩叫做 $\\mathrm{var}\\left[X\\right]=E\\left[\\left(X-\\mu\\right)^{2}\\right]$ 方差。\n",
     "    \n",
     "    三阶中心矩 $E\\left[\\left(X-\\mu\\right)^{3}\\right]$ 称为**偏度**,\n",
-    "    用于衡量随机变量的对称性；四阶矩 **峰度**\n",
+    "    用于衡量随机变量的对称性；四阶矩**峰度**\n",
     "    $E\\left[\\left(X-\\mu\\right)^{4}\\right]$ 则用来体现尾部厚度。\n",
     "\n",
     "-   矩条件不一定存在。例如，柯西分布就不存在均值；$t(2)$ 分布不存在方差。\n",
@@ -268,7 +272,7 @@
     "    $\\varphi\\left(\\cdot\\right)$ 是一个凸函数，那么\n",
     "    $\\varphi\\left(E\\left[X\\right]\\right)\\leq E\\left[\\varphi\\left(X\\right)\\right]。$\n",
     "\n",
-    "-   **Markov不等式** 是另一个简单但是重要的事实。如果\n",
+    "-   **Markov不等式**是另一个简单但是重要的事实。如果\n",
     "    $E\\left[\\left|X\\right|^{r}\\right]$ 存在，那么对于所有的$r\\geq1$都有\n",
     "    $P\\left(\\left|X\\right|>\\epsilon\\right)\\leq E\\left[\\left|X\\right|^{r}\\right]/\\epsilon^{r}$。\n",
     "    **Chebyshev不等式**\n",
@@ -287,15 +291,15 @@
     "\n",
     "二元随机变量是\n",
     "$X:\\Omega\\mapsto\\mathbb{R}^{2}$ 上的映射。我们可以由此推广到多元的随机变量。\n",
-    "$X:\\Omega\\mapsto\\mathbb{R}^{n}$ 。 我们可以定义 **联合CDF** 为\n",
+    "$X:\\Omega\\mapsto\\mathbb{R}^{n}$ 。 我们可以定义**联合CDF**为\n",
     "$F\\left(x_{1},\\ldots,x_{n}\\right)=P\\left(X_{1}\\leq x_{1},\\ldots,X_{n}\\leq x_{n}\\right)$ 。\n",
     "联合PDF的定义与之类似。\n",
     "\n",
     "我们有必要了解一下二元变量的联合分布、条件分布和边际分布，然后我们就可以将二元的情况推广到多元分布。假设二元随机变量\n",
     "$(X,Y)$ 有一个联合密度函数 $f(\\cdot,\\cdot)$。如果我们暂时忽略\n",
-    "$f(x)=0$ 的特殊情况，那么我们可以将它的 **条件密度** 简略地写成\n",
+    "$f(x)=0$ 的特殊情况，那么我们可以将它的**条件密度**简略地写成\n",
     "$f\\left(y|x\\right)=f\\left(x,y\\right)/f\\left(x\\right)$\n",
-    "。二元变量的 **边际密度** $f\\left(y\\right)=\\int f\\left(x,y\\right)dx$\n",
+    "。二元变量的**边际密度** $f\\left(y\\right)=\\int f\\left(x,y\\right)dx$\n",
     "则是把我们不感兴趣的那一个变量通过积分使它不再成为函数中的一个变量。\n",
     "\n",
     "### 条件概率和贝叶斯公式\n",
@@ -311,8 +315,7 @@
     "在条件概率的定义中, $A_{2}$\n",
     "扮演了结果空间的角色，所以 $P(A_{1}A_{2})$ 被 $P(A_{2})$的值标准化了。\n",
     "如果 $P(A_{2})=0$，\n",
-    "在部分的案例中，条件概率公式依然使用，但是在这种情况下，我们需要介绍两个测度之间的\n",
-    "**支配与被支配关系** (dominating and dominated)，我们在此不打算细谈。\n",
+    "在部分的案例中，条件概率公式依然使用，但是在这种情况下，我们需要介绍两个测度之间的**支配与被支配关系** (dominating and dominated)，我们在此不打算细谈。\n",
     "\n",
     "既然 $A_{1}$ 和 $A_{2}$ 是对称的,我们还能得出\n",
     "$P(A_{1}A_{2})=P(A_{2}|A_{1})P(A_{1})$ ,它表明了\n",
@@ -339,7 +342,7 @@
     "\n",
     "给定 $\\left(\\Omega,\\mathcal{F},P\\right)$ ，**子 $\\sigma$ 域**\n",
     "$\\mathcal{G}\\subseteq\\mathcal{F}$ 和一个 满足条件 $E\\left|Y\\right|<\\infty$ 的 $\\mathcal{F}$-测度函数\n",
-    " $Y$ 。**条件期望** $E\\left[Y|\\mathcal{G}\\right]$ 被定义为\n",
+    " $Y$。**条件期望** $E\\left[Y|\\mathcal{G}\\right]$ 被定义为\n",
     " $\\mathcal{G}$-可测函数，使得对于所有的 $A\\in\\mathcal{G}$:\n",
     "\n",
     "$$\n",
@@ -400,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -415,6 +418,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "98c8651c14c5e67168ec7360df025b52a3dda054aca34605ea6bb4da8d25168e"
+   }
   }
  },
  "nbformat": 4,
