--- a/Lecture2-CN.ipynb
+++ b/Lecture2-CN.ipynb
@@ -50,8 +50,7 @@
     "L(y,g(x))=(y-g(x))^2.\n",
     "$$\n",
     "\n",
-    "是一种常见的损失函数。\n",
-    "由于数据的随机性， 损失函数 $L(y,g(x))$ 也是随机的。这里的\"随机\"意味着不确定性， 即使在同一分布下，每次抽样也可能产生不同的结果。为了摆脱这种随机性的影响，我们根据联合分布 $(y,x)$ 对损失函数取数学期望，得到 $R(y,g(x))=E[L(y,g(x))]$，我们将其称为**风险**。\n",
+    "是一种常见的损失函数。由于数据的随机性， 损失函数 $L(y,g(x))$ 也是随机的。这里的\"随机\"意味着不确定性， 即使在同一分布下，每次抽样也可能产生不同的结果。为了摆脱这种随机性的影响，我们根据联合分布 $(y,x)$ 对损失函数取数学期望，得到 $R(y,g(x))=E[L(y,g(x))]$，我们将其称为**风险**。\n",
     "与损失函数不同，风险是一个确定性的量。与平方损失函数相对应的风险是 **均方误差** (mean square error，简记MSE)\n",
     "\n",
     "$$\n",
@@ -249,7 +248,9 @@
    "source": [
     "```{prf:exercise}\n",
     "证明: \n",
+    "\n",
     "(a) $E[xe]=0$ \n",
+    "\n",
     "(b) 若 $x$ 中包含常数项，则 $E[e]=0$ \n",
     "```"
    ]
@@ -287,7 +288,7 @@
     "\\tilde{y}=\\tilde{x}^{\\prime}_1\\gamma_1+\\tilde{e}_{\\gamma}.\n",
     "$$\n",
     "\n",
-    "其中波浪上标表示零均值化的变量。\n",
+    "其中上标波浪线“ $\\tilde{\\cdot}$ ”表示将变量零均值化。\n",
     "\n",
     "```{prf:exercise}  \n",
     "\n",
@@ -325,7 +326,7 @@
     "\n",
     "### 结构与识别\n",
     "\n",
-    "经济学被称为社会科学皇冠上的明珠， 常常被拿来与物理学这颗自然科学皇冠上的明珠进行对比。在开始本节内容之前， 我们对经济学与物理学进行一些对比， 以明确我们引入本节问题的必要性。回想一下那些耳熟能详的物理定律， 比如爱因斯坦的质能方程 $E=mc^{2}$ ，和牛顿的万有引力公式 $F=Gm_1 m_2/r^2$ 。这些物理学定律非常简洁明确， 体现着事物的一般规律。经济学中是否也有这样的规律呢? 遗憾的是，与物理学定律不同，经济现象很少能够像这样被简洁地描述。\n",
+    "经济学被称为社会科学皇冠上的明珠， 常常被拿来与物理学这颗自然科学皇冠上的明珠进行对比。在开始本节内容之前， 我们对经济学与物理学进行一些对比， 以明确我们引入本节问题的必要性。回想一下那些耳熟能详的物理定律， 比如爱因斯坦的质能方程 $E=mc^{2}$ ，和牛顿的万有引力公式 $F=Gm_1 m_2/r^2$。这些物理学定律非常简洁明确， 体现着事物的一般规律。经济学中是否也有这样的规律呢? 遗憾的是，与物理学定律不同，经济现象很少能够像这样被简洁地描述。\n",
     "\n",
     "在物理学中， 实验是验证物理定律的重要方式。在进行实验时，科学家们常常会通过一些精巧的设计来控制可能影响实验结果的其他因素，将噪声控制在可以忽略不计的水平上，使得实验的信噪比尽可能高。与之相反，经济学规律并不适合在实验室里进行实验。最糟糕的是，经济学研究的对象，人类，具有很强的异质性， 有许许多多难以控制的特征。对于同样的事件，来自不同文化和家庭背景的人可能会做出不同的反应。研究者很难对人们进行同质化的处理。总结来说，由于实验设置的缺陷与研究主体的异质性，经济学规律中的信噪比要显著低于物理学定律。\n",
     "\n",
@@ -371,7 +372,7 @@
     "ATE=E[Y(1)|D=1]-E[Y(0)|D=0].\n",
     "$$\n",
     "\n",
-    "因此，为了得到ATE的估计，我们需要用类似于彩票的方式随机地决定哪些人进入处理组 (treatment group*，此时$D=1$)，哪些人进入控制组 (control group*，此时$D=0$)。\n",
+    "因此，为了得到ATE的估计，我们需要用类似于彩票的方式随机地决定哪些人进入处理组(treatment group，此时$D=1$)，哪些人进入控制组(control group，此时$D=0$)。\n",
     "\n",
     "如果我们还有其它的控制变量，我们也可以进一步定义在条件 $x$ 上的处置效应:\n",
     "\n",
@@ -517,7 +518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -532,6 +533,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "98c8651c14c5e67168ec7360df025b52a3dda054aca34605ea6bb4da8d25168e"
+   }
   }
  },
  "nbformat": 4,
